--- a/sources/sections/00-introduction.adoc
+++ b/sources/sections/00-introduction.adoc
@@ -16,7 +16,7 @@ NOTE: Please note that the ModSpec has been approved by the OGC Membership as a 
 
 A standard that follows the rules specified in the ModSpec presents requirements organized in requirements classes which must be satisfied by passing the tests defined in a conformance suite (also known as the Abstract Test Suite in an OGC Standard). These tests are organized into conformance classes, each of which represents a mechanism for partial satisfaction of the standard. This results in a standard having a modular structure, where each requirements class has a corresponding conformance (test) class. In a well written standard, the normative clauses and any model or schema are organized in a manner that parallels the requirements and conformance clauses. A goal of the design pattern is the ability to define requirements classes and associated conformance classes that can be used across multiple standards. 
 
-There are numerous examples of requirements/conformance classes that can be used not only in OGC Standards, but for geospatially focused standards defined by other organizations and Standards Development Organizations (SDOs). Some OGC examples can be found in the https://docs.ogc.org/is/19-072/19-072.html[OGC API - Common Part 1: Core Standard] and in the https://github.com/opengeospatial/cdbswg/blob/master/cdb-2.0/cdb-core-crs-requirements-class.adoc[CDB 2.0 Standard CRS Requirements Module]. By formally implementing the requirements specified in the ModSpec, reusable, modular standrds can be developed.
+There are numerous examples of requirements/conformance classes that can be used not only in OGC Standards, but for geospatially focused standards defined by other organizations and Standards Development Organizations (SDOs). Some OGC examples can be found in the https://docs.ogc.org/is/19-072/19-072.html[OGC API - Common Part 1: Core Standard] and in the https://github.com/opengeospatial/cdbswg/blob/master/cdb-2.0/cdb-core-crs-requirements-class.adoc[CDB 2.0 Standard CRS Requirements Module]. By formally implementing the requirements specified in the ModSpec, reusable, modular standards can be developed.
 
 === Conformance, Requirements, and key information
 
@@ -39,7 +39,7 @@ declared once and is uniquely identified as such, each requirement will be in a 
 Therefore, the ModSpec defines a "requirements class" as a set of requirements that must
 all be passed to achieve a particular conformance class (see
 <<term-conformance-test-class>>). This document also includes a "middle" structure
-called a conformance test module, this document also includes requirements modules to
+called a conformance test module. Requirements modules
 parallel the conformance test modules. A standard written to the ModSpec may
 use this "module" structure in any manner consistent with the rest of this Policy.
 
@@ -61,7 +61,7 @@ passed to qualify to pass this conformance class. In terms of requirements, that
 that the dependent conformance class contains tests (by reference) for all
 requirements of the "included" conformance class.
 
-From the ModSpec's view of requirements classes, one requirements
+As defined in the ModSpec, one requirements
 class is dependent on another if the other is included through such a reference. In
 this manner, requirements classes can be treated as sets of requirements (each in a
 single requirements class but included in others by reference to its "home"
@@ -127,20 +127,20 @@ Future Parts to the ModSpec Standard may include:
 
 === Building Blocks
 
-In software development technology, there is a concept called _building block_. In software development, building blocks are used to support the software build process where source code files/libraries can be accessed from multiple sources, converted into executable code, and linked together in the proper order until a complete set of executable files is generated. The same concept can be applied to OGC Standards development: Requirements classes and/or modules can be linked together from one or more standards to create a new standard not originaly envisioned when the requirements were originally defined.
+In software development technology, there is a concept called _building block_. In software development, building blocks are used to support the software build process where source code files/libraries can be accessed from multiple sources, converted into executable code, and linked together in the proper order until a complete set of executable files is generated. The same concept can be applied to OGC Standards development: Requirements classes and/or modules can be linked together from one or more standards to create a new standard not originally envisioned when the requirements were originally defined.
 
 The https://pubs.opengroup.org/architecture/togaf8-doc/arch/chap32.html[Open Group] suggests that building blocks have the following characteristics:
 
 . A building block is a package of functionality defined to meet business or domain needs.
 . A building block may interoperate with other, inter-dependent, building blocks.
 . A good building block has the following characteristics:
-.. It considers implementation and usage, and evolves to exploit technology and standards.
-.. It may be assembled from other building blocks.
-.. It may be a subassembly of other building blocks.
+.. Considers implementation and usage, and evolves to exploit technology and standards.
+.. May be assembled from other building blocks.
+.. May be a subassembly of other building blocks.
 .. Ideally a building block is re-usable and replaceable, and well specified.
 . A building block may have multiple implementations but with different inter-dependent building blocks.
 
-These characteristics are slightly modified from the Open Group definitions to accommodate the use of the buidling block concept in standards work.
+These characteristics are slightly modified from the Open Group definitions to accommodate the use of the building block concept in standards work.
 
 NOTE: The approach modelled in the ModSpec has been referred to as the "core and extension model" due to its
 insistence on a modular structure throughout all parts of a standard and its implementation.
