--- a/sources/document.adoc
+++ b/sources/document.adoc
@@ -9,7 +9,8 @@
 :issued-date: 2029-11-01
 :published-date: 2029-11-01
 :copyright-year: 2024
-:fullname: Carl Reed, John Herring
+:fullname: Carl Reed
+:fullname_2: John Herring
 :role: editor
 :language: en
 :submitting-organizations: TBD
