--- a/sources/sections/05-conventions.adoc
+++ b/sources/sections/05-conventions.adoc
@@ -12,13 +12,13 @@ available standard (PAS) by ISO in its earlier 1.3 version.
 
 The normative provisions in this standard are denoted by the URI namespace
 
-http://www.opengis.net/spec/modspec/1.1/
+https://www.opengis.net/spec/modspec/1.1/
 
 All requirements that appear in this document are denoted by partial URIs which are relative to the namespace shown above.
 
 For the sake of brevity, the use of “req” in a requirement URI denotes:
 
-http://www.opengis.net/spec/modspec/1.1
+https://www.opengis.net/spec/modspec/1.1/
 
 An example might be:
 
@@ -28,7 +28,7 @@ All conformance tests that appear in this document are denoted by partial URIs w
 
 For the sake of brevity, the use of “conf” in a requirement URI denotes:
 
-http://www.opengis.net/spec/modspec/1.1/
+https://www.opengis.net/spec/modspec/1.1/
 
 The same convenstion is used for permissions (per) and recommendations (rec).
 
@@ -52,15 +52,12 @@ OCL:: Object Constraint Language (part of UML)
 === Finding requirements and recommendations
 
 Each normative statement in the ModSpec is stated in one and only one place,
-in a standard format, and has an unique label, such as REQ001, REC001, or PER001. A requirement, recommendation, or permission may be repeated for clarification. 
-The statement with the unique label is
-considered the official statement of the normative requirement or recommendation. 
+in a standard format, with an unique label, such as REQ001, REC001, or PER001. A requirement, recommendation, or permission may be repeated for clarification. 
+The statement with the unique label is considered the official statement of the normative requirement or recommendation. 
 
-In this document, all requirements are associated with tests specified in the abstract test suite
+In this document, all requirements are associated with tests specified in the test suite
 in <<annex-A>>. The reference to the requirement in the test case is done by a
-requirements label (in the form "*#Req &#x23;#*", where "&#x23;" is a number) associated to
-the *#home#* of the statement described above. Recommendations are
-not tested although they still are documented using a standard template and have unique identifiers.
+requirements label Recommendations are not tested although they still are documented using a standard template and have unique identifiers.
 
 Requirements classes are separated into their own clauses and named, and specified
 according to inheritance (direct dependencies). The Conformance test classes in the
