--- a/sources/document.adoc
+++ b/sources/document.adoc
@@ -6,8 +6,8 @@
 :docnumber: 08-131r3
 :edition: 1.1.0
 :received-date: 2024-11-01
-:issued-date: 2029-11-01
-:published-date: 2029-11-01
+:issued-date: xxxx-xx-xx
+:published-date: xxxx-xx-xx
 :copyright-year: 2024
 :fullname_1: Carl Reed
 :fullname_2: John Herring
