Trying to fix editor list

--- a/sources/document.adoc
+++ b/sources/document.adoc
@@ -1,6 +1,6 @@
 = The ModSpec Model - A Standard for Designing and Writing Modular Standards
 :doctype: draft standard
-:docsubtype: conceptual-model
+:docsubtype: logical-model
 :status: Draft
 :committee: technical
 :docnumber: 08-131r3
@@ -9,9 +9,8 @@
 :issued-date: xxxx-xx-xx
 :published-date: xxxx-xx-xx
 :copyright-year: 2024
-:fullname_1: Carl Reed
+:fullname: Carl Reed
 :fullname_2: John Herring
-:fullname_3: Chuck Heazel
 :role: editors
 :language: en
 :submitting-organizations: TBD
