Try to fix editor list. STart adding submitting orgs

--- a/sources/document.adoc
+++ b/sources/document.adoc
@@ -9,11 +9,11 @@
 :issued-date: xxxx-xx-xx
 :published-date: xxxx-xx-xx
 :copyright-year: 2024
-:fullname: Carl Reed
+:fullname_1: Carl Reed
 :fullname_2: John Herring
 :role: editors
 :language: en
-:submitting-organizations: TBD
+:submitting-organizations: Carl Reed, Heazeltech, ImageMatters
 :imagesdir: images
 :mn-document-class: ogc
 :mn-output-extensions: xml,html,doc,pdf,rxl
