--- a/sources/sections/00-preface.adoc
+++ b/sources/sections/00-preface.adoc
@@ -53,7 +53,9 @@ The following OGC Members contributed and particpated in developing Version 2 of
 
 The following OGC Members were key contributors to Version 1 of the ModSpec
 
+[%unnumbered]
 |===
+^h| Person ^h| Organization Represented
 | Simon Cox | CSIRO
 | David Danko | ESRI
 | James Greenwood | SeiCorp, Inc.
