--- a/sources/part1/part1-uml.adoc
+++ b/sources/part1/part1-uml.adoc
@@ -21,20 +21,20 @@
 :local-cache-only:
 :data-uri-image:
 
-include::sections/00-preface.adoc[]
+include::00-preface.adoc[]
 
-include::sections/00-foreword.adoc[]
+include::00-foreword.adoc[]
 
-include::sections/01-scope.adoc[]
+include::01-scope.adoc[]
 
-include::sections/02-conformance.adoc[]
+include::02-conformance.adoc[]
 
-include::sections/03-norm-refs.adoc[]
+include::03-norm-refs.adoc[]
 
-include::sections/04-terms-and-defs.adoc[]
+include::s04-terms-and-defs.adoc[]
 
-include::sections/05-conventions.adoc[]
+include::05-conventions.adoc[]
 
-include::sections/06-req-class.adoc[]
+include::06-req-class.adoc[]
 
-include::sections/aa-abstract-conformance.adoc[]
+include::aa-abstract-conformance.adoc[]
