--- a/sources/part1/part1-uml.adoc
+++ b/sources/part1/part1-uml.adoc
@@ -21,7 +21,7 @@
 :local-cache-only:
 :data-uri-image:
 
-include::00-preface.adoc[]
+include::sections/00-preface.adoc[]
 
 include::00-foreword.adoc[]
 
