--- a/sources/document.adoc
+++ b/sources/document.adoc
@@ -5,7 +5,7 @@
 :committee: technical
 :docnumber: 08-131r3
 :edition: 1.1.0
-:received-date: 2024-11-29
+:received-date: 2024-12-07
 :issued-date: 2029-11-01
 :published-date: 2029-11-01
 :copyright-year: 2024
@@ -16,7 +16,7 @@
 :fullname_3: Chuck Heazel
 :role_3: editor
 :language: en
-:submitting-organizations: Carl Reed, Heazeltech, ImageMatters
+:submitting-organizations: Carl Reed, Charles Heazel, ImageMatters
 :imagesdir: images
 :mn-document-class: ogc
 :mn-output-extensions: xml,html,doc,pdf,rxl
@@ -29,6 +29,8 @@ include::sections/00-foreword.adoc[]
 
 include::sections/01-scope.adoc[]
 
+include::sections/00-introduction.adoc[]
+
 include::sections/02-conformance.adoc[]
 
 include::sections/03-norm-refs.adoc[]
@@ -36,6 +38,8 @@ include::sections/03-norm-refs.adoc[]
 include::sections/04-terms-and-defs.adoc[]
 
 include::sections/05-conventions.adoc[]
+
+include::sections/06-fundamentals.adoc[]
 
 include::sections/06-req-class.adoc[]
 
