--- a/sources/part1/part1-uml.adoc
+++ b/sources/part1/part1-uml.adoc
@@ -3,9 +3,9 @@
 :docsubtype: logical-model
 :status: Draft
 :committee: technical
-:docnumber: 08-131r3
+:docnumber: 24-065
 :edition: 1.1.0
-:received-date: 2024-12-01
+:received-date: 2024-12-12
 :issued-date: xxxx-xx-xx
 :published-date: xxxx-xx-xx
 :copyright-year: 2024
