--- a/sources/document.adoc
+++ b/sources/document.adoc
@@ -6,8 +6,8 @@
 :docnumber: 08-131r3
 :edition: 1.1.0
 :received-date: 2024-11-29
-:issued-date: 2029-11-01
-:published-date: 2029-11-01
+:issued-date: 2025-xx-xx
+:published-date: 2025-xx-xx
 :copyright-year: 2024
 :fullname: Carl Reed
 :role: editor
