--- a/sources/part2/01-scope.adoc
+++ b/sources/part2/01-scope.adoc
@@ -3,7 +3,7 @@
 The OGC ModSpec Standard defines characteristics and structure for the specification of Standards 
 that will encourage implementation by minimizing difficulty determining
 requirements, mimicking implementation structure and maximizing usability and
-interoperability. Part 2 of the ModSpec defines the requirements for using XML. This requirements class covers any standard which has as one of its purposes
+interoperability. Part 2 of the ModSpec defines the requirements for using XML. The XML related requirements classes cover any standard which has as one of its purposes
 the introduction of a new XML schema. Such a standard would normally define the
 schema, all of its components, and its intended uses.
 
